# grpc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
proto/: echo.proto
src/: main.rs  metrics.rs  service.rs  signals.rs
